fix(company): không cấp presigned URL cho giấy phép không tồn tại
Trang xác thực hiển thị lỗi S3 NoSuchKey thô khi businessLicenseFileUrl trỏ tới object không tồn tại (vd dữ liệu seed). Thêm FileUploadService.objectExists() (S3 headObject / kiểm tra file local); service trả null khi file trống hoặc không tồn tại; controller dùng Collections.singletonMap để chịu giá trị null. FE đã sẵn placeholder khi url=null.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>